# handbook_algos

./: CMakeLists.txt
3.1/: task_1  task_1.cpp  task_2.py  task_3.py
3.1/task_1.dSYM/Contents/Resources/DWARF/: task_1
3.1/task_1.dSYM/Contents/Resources/Relocations/aarch64/: task_1.yml
3.2/: task_1.py
3.3/: task_1.py  task_2.py
3.4/: task_1.py
3.5/: task_2.py  task_3.py
3.6/: task_1.py  test.py
4.1/: task_2.py  task_3.py  task_4.py
4.3/: task_1.py  task_2.py  task_3.py  task_4.py
5.1/: task_1.py  task_2.py  task_3.py  task_4.py
5.2/: task_1.py  task_2.py  task_3.py
6.1/: task_1.py  task_2.py
6.2/: task_1.py  task_2.py
6.3/task_1/: task_1.cpp
6.3/task_2/: task_2.cpp
6.4/task_1/: task_1.cpp
6.4/task_2/: task_2.cpp
6.4/task_3/: task_3.cpp
6.5/task_1/: task_1.cpp
6.6/task_1/: task_1.cpp
6.6/task_2/: task_2.cpp
6.6/task_3/: task_3.cpp
