cmake_minimum_required(VERSION 3.27)
project(Handbook)

set(CMAKE_CXX_STANDARD 14)

include_directories(6.3/task_1)

add_executable(task_1_6.3 6.3/task_1/task_1.cpp
)
add_executable(task_2_6.3 6.3/task_2/task_2.cpp)
add_executable(task_1_6.4 6.4/task_1/task_1.cpp)
add_executable(task_2_6.4 6.4/task_2/task_2.cpp)
add_executable(task_3_6.4 6.4/task_3/task_3.cpp)
add_executable(task_1_6.5 6.5/task_1/task_1.cpp)
add_executable(task_1_6.6 6.6/task_1/task_1.cpp)
add_executable(tsak_2_6.6 6.6/task_2/task_2.cpp)
